2004-12-10  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd

2004-12-09  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-video-widget-gst.c: (got_source),
	(bacon_video_widget_new):
	  Actually set media device location.

2004-12-09  Bastien Nocera  <hadess@hadess.net>

	* src/totem-pl-parser.c: (totem_pl_parser_parse_internal):
	patch from Richard <bloodpup@slackcrew.com> to fix the parsing in
	the subsequent subdirectories (Closes: #160829)

2004-12-06  Bastien Nocera  <hadess@hadess.net>

	* configure.in: fix typo checking for the X includes, spotted by
	Mariano Suarez-Alvarez

2004-12-04  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-video-widget-gst.c:
	(bacon_video_widget_get_current_frame):
	  Don't use ghostpads for screenshots either.

2004-12-04  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* src/bacon-video-widget-xine.c: (bacon_video_widget_get_zoom):
	fix return values for the _if_fail

2004-12-04  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_can_set_zoom),
	(bacon_video_widget_set_zoom), (bacon_video_widget_get_zoom):
	  Fix Gst build.

2004-12-04  Bastien Nocera  <hadess@hadess.net>

	* README: upd
	* data/totem.glade: upd
	* src/bacon-video-widget-xine.c: (bacon_video_widget_can_set_zoom),
	(bacon_video_widget_set_zoom), (bacon_video_widget_get_zoom):
	* src/bacon-video-widget.h:
	* src/totem.c: (totem_action_zoom_relative),
	(totem_action_zoom_reset), (on_resize_1_2_activate),
	(on_resize_1_1_activate), (on_resize_2_1_activate),
	(on_zoom_in_activate), (on_zoom_reset_activate),
	(on_zoom_out_activate), (totem_action_handle_key),
	(totem_callback_connect): added zooming in the video with 'R' and 'T',
	and break GStreamer-backend compilation (Closes: #144929)

2004-12-03  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c: (bacon_video_widget_unrealize):
	Send the XINE_GUI_SEND_WILL_DESTROY_DRAWABLE event when the video