@@ -1,3 +1,9 @@
+2004-12-12  Bastien Nocera  <hadess@hadess.net>
+
+	* src/bacon-video-widget-xine.c:
+	(bacon_video_widget_get_subtitle_mrl): don't try to load a subtitle
+	file when one was already supplied in the URI
+
 2004-12-10  Bastien Nocera  <hadess@hadess.net>
 
 	* NEWS: upd
